--- a/.github/workflows/linkcheck.yml
+++ b/.github/workflows/linkcheck.yml
@@ -1,8 +1,8 @@
 name: LinkCheck - All files 🔗
 
 on:
-  schedule:
-    - cron: "0 5 * * 0" # Runs at 05:00 on Sunday.
+  # schedule:
+  #  - cron: "0 5 * * 0" # Runs at 05:00 on Sunday.
   workflow_dispatch:
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
