--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -10,8 +10,8 @@ on: # zizmor: ignore[cache-poisoning]
         required: false
         default: "true"
   # No cache enabled for `schedule` and `push`
-  schedule:
-    - cron: "0 0 1 * *" # once a month on main
+  # schedule:
+  #   - cron: "0 0 1 * *" # once a month on main
   push:
     tags:
       - "*"
