--- a/.github/workflows/testing-and-deployment.yml
+++ b/.github/workflows/testing-and-deployment.yml
@@ -5,8 +5,8 @@ on: # zizmor: ignore[cache-poisoning]
   pull_request:
   merge_group:
   workflow_dispatch:
-  schedule:
-    - cron: "0 4 * * *"
+  # schedule:
+  #   - cron: "0 4 * * *"
   push:
     tags:
       - "*"
